<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stektpotet.lab02.DisplayActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:iconTint="@color/dark_colorAccent"
        android:orderInCategory="100"
        android:title="@string/action_settings"

        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_sync_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_about"
        android:contentDescription="Not Implemented"
        android:tooltipText="Not implemented"
        app:showAsAction="never" />
</menu>
