<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <EditTextPreference android:title="RSS Feed"
        android:key="feed_src"
        android:defaultValue="@string/pref_feed_default_src"
        android:summary="Please provide a RSS/Atom feed URL"/>

    <ListPreference android:title="Number of posts"
        android:defaultValue="10"
        android:key="feed_post_limit"
        android:entries="@array/pref_feed_fetch_count"
        android:entryValues="@array/pref_feed_fetch_count"
        android:summary="@string/pref_feed_fetch_count_desc"/>

    <SwitchPreference

        android:key="auto_fetch"
        android:title="@string/pref_feed_auto_fetch" />

    <!--android:summary="@string/pref_feed_auto_fetch_description"-->

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code.
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
 -->
</PreferenceScreen>
